# Python-virtual-env

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RELEASE_DEPLOY.md  pyproject.toml
.github/workflows/: 1_precommit.yml  2_release.yml  3_pre-deploy.yml  4_deploy.yml  deploy.yml  pre-deploy.yml  precommit.yml  pytest.yml  release.yml
src/virtual_env/: __init__.py  env_manager.py
tests/: __init__.py  test_env_manager.py  test_version.py
venv_py/: __init__.py  env_manager.py
virtual_env/: __init__.py  env_manager.py
