[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "virtual-env"
version = "0.1.0"
description = "A virtual env activator, self contained."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "r4d4m4n71s", email = "your.email@example.com" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]